Added a link to the project’s git repository in the package.json file; Added a link to the project’s homepage in the package.json file; Added a list of supported platforms in the package.json file; Added short plugin description within the plugin.xml file.

--- a/plugin.xml
+++ b/plugin.xml
@@ -3,6 +3,10 @@
     version="1.0.0" xmlns="http://apache.org/cordova/ns/plugins/1.0">
     <name>Imap</name>
 
+    <description>
+        This plugin will enable a Cordova application to use the IMAP (Internet Message Access Protocol) features.
+    </description>
+
     <lisence>ISC</lisence>
 
     <js-module name="imap" src="www/Imap.js">
