--- a/package.json
+++ b/package.json
@@ -6,6 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "cordova": {
+    "id": "cordova-plugin-imap",
+    "platforms": [
+      "android"
+    ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aleksandar888/cordova-plugin-imap.git"
+  },
   "keywords": [
     "ecosystem:cordova",
     "imap",
@@ -14,5 +24,6 @@
     "ionic-imap"
   ],
   "author": "Alexander Noveski",
-  "license": "ISC"
+  "license": "ISC",
+  "homepage": "https://github.com/aleksandar888/cordova-plugin-imap#readme"
 }
