--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-imap",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "This plugin will enable a Cordova application to use the IMAP (Internet Message Access Protocol) features.",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,8 @@
   "cordova": {
     "id": "cordova-plugin-imap",
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   },
   "repository": {
@@ -21,6 +22,7 @@
     "imap",
     "cordova-imap",
     "cordova-android",
+    "cordova-ios",
     "ionic-imap"
   ],
   "author": "Alexander Noveski",
