--- a/plugin.xml
+++ b/plugin.xml
@@ -32,6 +32,8 @@
                      target-dir="src/cordova-plugin-imap/Imap"/>
         <source-file src="src/android/parseMessageBody/TextBodyPart.java"
                      target-dir="src/cordova-plugin-imap/Imap"/>
+        <source-file src="src/android/parseMessageBody/InlineAttachmentHandler.java"
+                     target-dir="src/cordova-plugin-imap/Imap"/>
         <source-file src="src/android/processStreamContent/ProcessStreamContent.java"
                      target-dir="src/cordova-plugin-imap/Imap"/>
     </platform>
